<resources>
    <string name="app_name">Watchlist</string>
    <string name="howtosearch">Search for a movie or series below</string>
    <string name="hintsearch">Movie title</string>
    <string name="wl">Movies you should watch: </string>
    <string name="Seewl">See watchlist</string>
    <string name="search">Search</string>
    <string name="Add">+</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, </string>
</resources>
